[ref] Moved future work section from README.md to Report.ipynb

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -408,11 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Future development\n",
+    "Agent's learning performances (number of episodes to solve the task) should be improved implementing the following:\n",
+    "- Prioritized experience replay\n",
+    "- Dueling DQN\n",
+    "\n",
+    "In addition, the same task should be solved starting from raw pixel observations."
    ]
   }
  ],
